--- a/form.html
+++ b/form.html
@@ -11,7 +11,9 @@
     <title>Reg... Form</title>
 </head>
 <body>
-    <!-- <header></header> -->
+    <header>
+        <div id="delete-me"> Coming soon!! site under construction <br> Please do not Grade me yet. Have mercy !!</div>
+    </header>
     <main>
         <div id="box-1">
             <h1>Learn to code by watching others</h1>
