Updates on development

--- a/index.html
+++ b/index.html
@@ -12,35 +12,59 @@
     <title>MyHuddle</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div id="header-1">
+            <img src="./images/logo.svg" alt="logo" id="logo">
+            <button id="btn-1">Try it Free</button>
+        </div>
+        <div id="header-2">
+            <div>
+                <p>
+                    <span id="h1">
+                        Build The Community Your Fans Will Love
+                    </span>
+                    <span id="text">
+                        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as 
+                        you engage in genuine discussions.
+                    </span>
+                </p>
+                <button id="btn-2">Get Started For Free</button>
+            </div>
+            <img src="./images/illustration-mockups.svg" alt="img" id="chat">
+        </div>
+    </header>
     <main>
         <div class="card " id="card-1">
             <p id="card-1-1">
-                <h2>Grow Together</h2>
+                <span class="h2">Grow Together</span>
                 Generate meaningful discussions with your audience and build a strong, loyal community.
                 Think of the insightful conversations you miss out on with a feedback form.
             </p>
-            <img src="./images/illustration-grow-together.svg" alt="img" id="card-1-2">
+            <div class="img" ><img src="./images/illustration-grow-together.svg" alt="img" id="card-1-2"></div>
             
         </div>
         <div class="card " id="card-2">
-            <img src="./images/illustration-flowing-conversation.svg" alt="img" id="card-2.1">
-            <p id="card-2.2">
-                <h2>Flowing conversations</h2>
+            <div class="img" ><img src="./images/illustration-flowing-conversation.svg" alt="img" id="card-2-1"></div>
+            <p id="card-2-2">
+                <span class="h2">Flowing conversations</span>
                 You wouldn't paginate a conversaton in real life, so why do it online? Our threads have just-in time 
                 loading for a more natural flow.
             </p>
         </div>
         <div class="card " id="card-3">
-            <p id="card-3.1">
-                <h2>Your Users</h2>
+            <p id="card-3-1">
+                <span class="h2">Your Users</span>
                 It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
                 once signed in to your app, your users can now start chatting immediately.
             </p>
-            <img src="./images/illustration-your-users.svg" alt="img" id="card-3.2">
+            <div class="img" ><img src="./images/illustration-your-users.svg" alt="img" id="card-3-2"></div>     
         </div>
     </main>
     <footer>
+        <div id="airbox" class="card">
+            <p id="h0">Ready To Build Your Community ?</p>
+            <button id="btn-3">Get Started For Free</button>
+       </div>
         <h1>Huddle</h1><br>
         <div id="box-flex">
             <div id="foo-col-1">
