--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </main>
     <footer>
-        <div id="airbox" class="card">
+        <div id="airbox">
             <p id="h0">Ready To Build Your Community ?</p>
             <button id="btn-3">Get Started For Free</button>
        </div>
